--- a/app/views/scripts/application/editTask.phtml
+++ b/app/views/scripts/application/editTask.phtml
@@ -8,14 +8,14 @@
 </head>
 
 <?php
-$data = JsonManager::readJson();
+$data = TaskModel::readJson();
 if (isset($_POST['deleteTaskId'])) {
     $taskIdToDelete = $_POST['deleteTaskId'];
     if (isset($data[$taskIdToDelete])) {
         // Remove the task from the array
         unset($data[$taskIdToDelete]);
         // Update the JSON file
-        JsonManager::writeJson($data);
+        TaskModel::writeJson($data);
         // Redirect to the deletedTask page
         header("Location: http://localhost/DevOPS/web/deleted");
         exit;
@@ -23,7 +23,7 @@ if (isset($_POST['deleteTaskId'])) {
 }
 
 // Supongamos que ya tienes la lista de tareas en un array llamado $data
-$data = JsonManager::readJson();
+$data = TaskModel::readJson();
 // Verificar si se ha pasado el parámetro taskId en la URL
 if (isset($_GET['taskId'])) {
     // Obtener el ID de la tarea seleccionada
@@ -65,7 +65,7 @@ if ($_SERVER['REQUEST_METHOD'] === 'POST') {
             'endDate' => $endDate
         ];
         // Guardar los cambios en el archivo JSON
-        JsonManager::writeJson($data);
+        TaskModel::writeJson($data);
         // Redirigir a la página de lista de tareas
         header("Location: http://localhost/DevOPS/web/updated");
         exit;
