--- a/app/views/scripts/application/showList.phtml
+++ b/app/views/scripts/application/showList.phtml
@@ -19,10 +19,8 @@
         </div>
 
     
-        <?php if (empty($tasks)){ ?>
-        <p class="text-gray-700 text-lg">No tasks created yet.</p>
-        <?php } else { ?>    
-    <?php foreach ($this->tasks as $taskId => $task) { ?>
+        <?php if (!empty($tasks)){     
+        foreach ($this->tasks as $taskId => $task) { ?>
         <div class="bg-white shadow rounded-lg p-4 mb-4 flex flex-col md:flex-row md:items-center justify-between">
             <div class="md:flex-grow">
                 <h3 class="text-lg font-bold mb-2"><?= $task['name'] ?></h3>
@@ -51,7 +49,9 @@
                 </form>
             </div>
         </div>
-        <?php } 
+        <?php }} else { ?>
+            <p class="text-gray-700 text-lg">No tasks created yet.</p>
+        <?php 
             } ?>
 
     </div>
