--- a/app/views/scripts/application/viewTask.phtml
+++ b/app/views/scripts/application/viewTask.phtml
@@ -21,7 +21,7 @@
         </div>
 
         <?php
-        $data = TaskModel::readJson();
+        $data = TaskModel::readJson(TaskModel::$filePath);
 
         if (isset($_GET['taskId'])) {
             $taskId = $_GET['taskId'];
