--- a/app/views/scripts/application/showList.phtml
+++ b/app/views/scripts/application/showList.phtml
@@ -12,48 +12,43 @@
     <div class="bg-gray-100 p-4">
         <h1 class="text-3xl font-bold text-center">Task List</h1>
         <div class="mb-4">
-            <a href="http://localhost/DevOPS/web/taskForm"
-                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+            <a href="http://localhost/DevOPS/web/taskForm" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
                 Add a new task
             </a>
         </div>
-
-    
-        <?php if (!empty($tasks)){     
-        foreach ($this->tasks as $taskId => $task) { ?>
-        <div class="bg-white shadow rounded-lg p-4 mb-4 flex flex-col md:flex-row md:items-center justify-between">
-            <div class="md:flex-grow">
-                <h3 class="text-lg font-bold mb-2"><?= $task['name'] ?></h3>
-                <p class="text-gray-500 mt-2">
-                    Author: <?= $task['author'] ?> | Status: <?= $task['status'] ?>
-                </p>
-            </div>
-            <div class="md:space-x-2 flex items-center mt-4 md:mt-0">
-                <form method="post" action="http://localhost/DevOPS/web/viewTask?taskId=<?= $taskId ?>">
-                    <input type="hidden" name="taskId" value="<?= $taskId ?>">
-                    <button type="submit"
-                        class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">
-                        View
-                    </button>
-                </form>
-                <a href="http://localhost/DevOPS/web/edit?taskId=<?= $taskId ?>"
-                    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-                    Update
-                </a>
-                <form method="post" action="http://localhost/DevOPS/web/deleted">
-                    <input type="hidden" name="deleteTaskId" value="<?= $taskId ?>">
-                    <button type="submit" onclick="return confirm('Are you sure you want to delete this task?')"
-                        class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">
-                        Delete
-                    </button>
-                </form>
-            </div>
-        </div>
-        <?php }} else { ?>
+        <?php if (count($this->tasks)) {
+            foreach ($this->tasks as $taskId => $task) { ?>
+                <div class="bg-white shadow rounded-lg p-4 mb-4 flex flex-col md:flex-row md:items-center justify-between">
+                    <div class="md:flex-grow">
+                        <h3 class="text-lg font-bold mb-2"><?= $task['name'] ?></h3>
+                        <p class="text-gray-500 mt-2">
+                            Author: <?= $task['author'] ?> | Status: <?= $task['status'] ?>
+                        </p>
+                    </div>
+                    <div class="md:space-x-2 flex items-center mt-4 md:mt-0">
+                        <form method="post" action="http://localhost/DevOPS/web/viewTask?taskId=<?= $taskId ?>">
+                            <input type="hidden" name="taskId" value="<?= $taskId ?>">
+                            <button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">
+                                View
+                            </button>
+                        </form>
+                        <a href="http://localhost/DevOPS/web/edit?taskId=<?= $taskId ?>" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                            Update
+                        </a>
+                        <form method="post" action="http://localhost/DevOPS/web/deleted">
+                            <input type="hidden" name="deleteTaskId" value="<?= $taskId ?>">
+                            <button type="submit" onclick="return confirm('Are you sure you want to delete this task?')" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">
+                                Delete
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            <?php }
+        } else { ?>
             <p class="text-gray-700 text-lg">No tasks created yet.</p>
-        <?php 
-            } ?>
-
+        <?php
+        } ?>
     </div>
 </body>
+
 </html>
