--- a/app/views/layouts/layout.phtml
+++ b/app/views/layouts/layout.phtml
@@ -1,28 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        html, body {
+            height: 100%;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+        main {
+            flex: 1;
+            min-height: calc(100vh - 196px); /* Height of header + navigation + footer */
+        }
+        .home-link {
+            padding: 0.5rem 1rem;
+            background-color: #4a90e2;
+            color: white;
+            text-decoration: none;
+            border-radius: 0.25rem;
+        }
+    </style>
+    <link href="<?= $this->baseUrl() ?>/public/styles.css" rel="stylesheet">
     <title>ToDo Project</title>
 </head>
-
-<body class="bg-gray-100 h-screen flex flex-col">
+<body>
     <header class="bg-gray-800 text-white font-bold py-2 px-4">
         <nav class="flex justify-between items-center">
-            <a href="<?= $this->baseUrl() ?>/ " class="home-link bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Home</a>
+            <a href="<?= $this->baseUrl() ?>/" class="home-link">Home</a>
         </nav>
     </header>
-
-    <main class="flex-grow">
+    
+    <main class>
         <?= $this->content() ?> <!-- Contenido específico de cada página -->
     </main>
-
-    <footer class="bg-gray-800 text-white p-3 text-center mt-auto">
+    
+    <footer class="bg-gray-800 text-white p-3 text-center">
         &copy; <?= date('Y') ?> DevOPS - ToDo Project
     </footer>
 </body>
-
 </html>
