--- a/app/views/scripts/application/savedTask.phtml
+++ b/app/views/scripts/application/savedTask.phtml
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Created</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head>
+
 <body>
     <div class="bg-gray-100 min-h-screen py-6 flex flex-col justify-center sm:py-12">
         <div class="relative py-3 sm:max-w-xl sm:mx-auto">
@@ -21,9 +30,12 @@
             if (countdownValue >= 0) {
                 setTimeout(startCountdown, 1000);
             } else {
-                window.location.href = "<?= $this->baseUrl() ?>/showList";
+                window.location.href = "http://localhost/DevOPS/web/showList";
             }
         }
 
         startCountdown();
     </script>
+</body>
+
+</html>
