--- a/app/views/scripts/application/viewTask.phtml
+++ b/app/views/scripts/application/viewTask.phtml
@@ -1,13 +1,11 @@
-<?php $task = $this->task; $taskId = $this->taskId;
-$url = $this->baseUrl();?>
-
+<?php $task = $this->task; ?>
 <div class="bg-gray-100 p-4">
     <h2 class="text-xl font-bold mb-4">View Task</h2>
     <div class="flex justify-between mb-4">
-        <a href="<?= $url ?>/taskForm" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+        <a href="http://localhost/DevOPS/web/taskForm" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
             Add Task
         </a>
-        <a href="<?= $url ?>/showList" class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded">
+        <a href="http://localhost/DevOPS/web/showList" class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded">
             Back to Task List
         </a>
     </div>
@@ -29,12 +27,12 @@ $url = $this->baseUrl();?>
         <?php endif; ?>
     </div>
     <div class="space-x-2 flex items-center">
-        <a href="<?= $this->baseUrl() ?>/edit?taskId=<?= $taskId ?>" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+        <a href="http://localhost/DevOPS/web/edit?taskId=<?= $taskId ?>" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
             Update
         </a>
         <form method="post">
             <input type="hidden" name="deleteConfirmed" value="1">
-            <button type="submit" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded" onclick="return confirm('Are you sure you want to task?');">
+            <button type="submit" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded" onclick="return confirm('Are you sure you want to delete this task?');">
                 Delete
             </button>
         </form>
